Feat/network badges (#1640)
* feat: wip

* feat: initial value for select

* feat: start adjusting issuer form to account for networks as well

* fix: remove old network model, manager etc

* feat: wip

* feat: translations

* feat: adjust network manager

* feat: new apis and model adjustments

* feat: networkcard styles

* feat: copy permissions, templates, styles

* feat: unify issuer form

* feat: partner instances api

* feat: partner instances api badge detail

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: merge error

* fix: more merge errors

* feat: list network badge instances

* feat: catalog, apis styles

* fix: styles, api models

* feat: wip detail components

* fix: dialog styles

* feat: translations

* fix: success dialog style

* fix: templates

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: tabs, translation

* fix: issuer form after merge

* feat: improve public network page

* fix: refetch partners for dynamic update

* feat: move template to own file, select network issuer

* feat: improve tabs

* fix: types

* feat(wip): partner badges

* fix: templates and minor things

* fix: filter out network badges from results

* fix: styles, filter

* feat: show awarding issuers

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: types, cleanup

* fix: more merge problems

* fix: crumbs, title

* fix: improve margin in dialog

* fix: width

* feat: public partner section

* fix: show 0 count in tabs

* fix: filter out networks

* fix: margin

* fix: margins

* fix: load instances for network badges

* fix: standard colors, subscription

* refactor: manage invites on dashboard component

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -267,20 +267,20 @@
 		"askForPluginText": "Unser <span class='tw-font-bold'>Plugin</span> bietet dir die Möglichkeit, Badges aus deiner eigenen digitalen Lehrumgebung heraus zu vergeben.",
 		"betaPhase": "Unsere Plattform befindet sich noch in der Betaphase. <b>Du hast Fehler entdeckt? Schreib uns gerne an <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
 		"award": "vergeben",
-		"badgePreview": "Vorschau Badge",
-		"certPreview": "Vorschau PDF-Zertifikat",
+		"badgePreview": "Vorschau: Badge",
+		"certPreview": "Vorschau: PDF-Zertifikat",
 		"batchAwardText1": "Vergebe den Badge an eine lernende Person oder",
 		"batchAwardTextLink": "klicke hier, um den Badge an mehrere Lernende gleichzeitig",
 		"batchAwardText2": "zu vergeben",
 		"batchAwardFailed": "Badge-Massenvergabe fehlgeschlagen",
 		"failedBatchMonitoring": "Fortschitt der Vergabe konnte nicht ermittelt werden",
-		"awardedPerson": "Name der Empfänger:in",
+		"awardedPerson": "Name Empfänger:in",
 		"sendEmail": "Empfänger:in mit E-Mail benachrichtigen",
 		"giveBadge": "Badge vergeben",
 		"giveBadges": "Badges vergeben",
 		"badgeAwardInProgress": "Vergebe Badge",
 		"giveQr": "QR-Code-Vergabe erstellen",
-		"nameWarning": "Beachte: Der Name wird als Klartext im Badge gespeichert.",
+		"infoNamePlainText": "Der Name wird als Klartext im Badge gespeichert und erscheint auf dem PDF-Zertifikat.",
 		"multipleBadgeAwardHeadline": "Badge an mehrere Lernende gleichzeitig vergeben",
 		"uploadListText": "Du kannst eine <span class='tw-font-bold'>Liste von Empfänger:innen importieren</span>, die den Badge gleichzeitig erhalten sollen. So geht's:",
 		"downloadExampleCSV": "Lade unsere Datei-Vorlage herunter:",
@@ -343,10 +343,11 @@
 		"revokeSuccess": "Badge von {{ recipient}} zurücknehmen",
 		"revokeError": "Widerrufen des Badges von {{ recipient }} fehlgeschlagen",
 		"searchIssuer": "Institution suchen",
+		"searchNetwork": "Netzwerk suchen",
 		"staffOwnerRights": "Zugriff auf alle Funktionen inkl. Hinzufügen/Entfernen von Editor:innen und Mitarbeiter:innen, Bearbeitung der Institutionsdetails sowie Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffEditorRights": "Rechte zum Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffMemberRights": "Kann die von Eigentümer:innen und/oder Editor:innen erstellten Badges vergeben (inkl. QR-Code-Vergaben erstellen, bearbeiten und löschen).",
-		"imageFormat": "(Format 1:1 / quadratisch)",
+		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
 		"nameOfIssuer": "Name der Institution",
 		"websiteUrl": "Webseiten-URL",
 		"schoolLabel": "Schule (Grundschulen, weiterführende Schulen, Berufsschulen, Institutionen formaler schulischer Bildung)",
@@ -373,8 +374,22 @@
 		"linkedInUseNoteText": "Lernende können erhaltene Badges in ihr LinkedIn-Profil einbinden. Damit das Zertifikat dort mit dem \t\t\tLogo-Bild deiner Institution erscheint, müssen wir die LinkedIn-ID deiner Institution hinterlegen.",
 		"addLinkedInId": "LinkedIn-ID ergänzen",
 		"findLinkedInId": "So findest du die LinkedIn-ID:",
-		"findLinkedInIdText": "Gehe zur Seite deiner Institution auf LinkedIn.  Die ID ist die Zahlenfolge in der entsprechenden URL. Die URL lautet zum Beispiel: www.linkedin.com/company/<span class='tw-font-bold'>12345678</span>/admin. → <span class='tw-font-bold'>ID = 12345678</span>.",
-		"findLinkedInIdNote": "Du kannst die LinkedIn-ID jederzeit auf der Seite deiner Institution durch „Bearbeiten” der Institutions-Details ergänzen."
+		"findLinkedInIdText": "Gehe zur Seite deiner Institution auf LinkedIn.  Die ID ist die Zahlenfolge in der entsprechenden URL. Die URL lautet zum Beispiel: www.linkedin.com/company/<span class='tw-font-bold'>12345678</span>/admin. → ID = <span class='tw-font-bold'>12345678</span>.",
+		"findLinkedInIdNote": "Du kannst die Linkedin-ID jederzeit auf der Seite deiner Institution durch „Bearbeiten” der Institutions-Details ergänzen.",
+		"issueByEmail": "per E-Mail vergeben",
+		"recipientEmail": "E-Mail-Adresse Empfänger:in",
+		"emailIsIdentifier": "Die E-Mail dient als Identifier für den Badge. Hierhin wird der Badge gesendet.",
+		"receivesBadgeByEmail": "Der/die Empfänger:in erhält den Badge per E-Mail.",
+		"issuerBadges": "Institutions-Badges",
+		"networkBadges": "Netzwerk-Badges",
+		"badgesInNetworks": "Badges in Netzwerken",
+		"yourIssuersAreInNetworks": "Institutionen von dir sind Teil folgender Netzwerke:",
+		"awardedNetworkBadges": "Diese Badges hat {{issuer}} <span class='tw-underline'>über das jeweilige Netzwerk vergeben</span>:",
+		"noAwardedNetworkBadges": "{{issuer}} hat noch keine Badges <span class='tw-underline'>über ein Netzwerk vergeben</span>.",
+		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk <span class='tw-underline'>freigegeben</span>:",
+		"noBadgesApprovedForNetworks": "{{ issuer }} hat noch keine Badges für die Nutzung im Netzwerk <span class='tw-underline'>freigegeben</span>.",
+		"badgeAwards": "Badge-Vergaben",
+		"partnerBadges": "Partner-Badges"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
@@ -416,9 +431,18 @@
 			"staff": "Mitarbeiter:in"
 		},
 		"confirmNetworkInvitation": "Bestätige die <span class='tw-font-bold'>Netzwerk-Einladung von {{networkName}}</span> für deine Institution <span class='tw-italic'>{{issuerName}}</span> mit Klick auf den Button:",
-		"partnerSince": "Partner:in seit",
+		"partnerSince": "Netzwerk-Partner:in seit",
 		"alreadyConfirmed": "Ein anderes Mitglied von <span class='tw-italic'> {{issuerName}} hat die Netzwerk-Einladung von <span class='tw-font-bold'> {{networkName}}</span> bereits bestätigt.",
-		"view": "Netzwerk ansehen"
+		"view": "Netzwerk ansehen",
+		"createBadge": "Netzwerk-Badge erstellen",
+		"awardBadgeIssuer": "Über welche deiner <span class='tw-font-bold'>Institutionen</span> soll der Badge vergeben werden?",
+		"networkBadges": "Netzwerk-Badges",
+		"noPartnerBadgesYet": "Bisher hat keine Partner-Institution einen Badge für das Netzwerk freigegeben.",
+		"createdByNetwork": "Erstellt vom NETZWERK",
+		"partOfNetwork": "Teil vom NETZWERK",
+		"noBadgesYet": "Das Netzwerk <span class='tw-font-semibold'>{{network}}</span> hat noch keine eigenen Badges erstellt.",
+		"sharedBy": "Freigegeben von",
+		"sharedOn": "Freigegeben am"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
@@ -506,7 +530,13 @@
 		"standard-info-30": "Seit Juni 2025 werden alle Badges auf OEB im neuen, zukunfts-sicheren 3.0-Standard erstellt. Weitere Infos dazu findest du in unseren <a class='tw-underline' href='/public/faq'>FAQ</a>.",
 		"awardingInProgress": "Badge-Vergabe läuft",
 		"willBeAwardedSoon": "Gleich haben wir alle Badges verschickt!",
-		"catalogAllLoaded": "Alle Badges, die deinen Suchkriterien entsprechen, wurden geladen."
+		"catalogAllLoaded": "Alle Badges, die deinen Suchkriterien entsprechen, wurden geladen.",
+		"shareOnNetwork": "Für Netzwerk freigeben",
+		"shareOnWhichNetwork": "Für welches deiner Netzwerke soll der Badge freigegeben werden?",
+		"allNetworkMembersGetBadge": "Alle Mitglieder des gewählten Netzwerks können den Badge über ihre Institution vergeben.",
+		"networkAssertionsGetTracked": "Alle Vergaben des Badges fliessen in die Daten-Auswertung des Netzwerks ein.",
+		"cantRemoveFromNetwork": "Der Badge kann NICHT wieder aus dem Netzwerk entfernt werden.",
+		"shareBadgeOnNetwork": "Badge für Netzwerk freigeben"
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Kategorie wählen",
