--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -279,7 +279,7 @@
 		"giveBadges": "Award badges",
 		"badgeAwardInProgress": "Award badge",
 		"giveQr": "Create QR code award",
-		"nameWarning": "Note: The name will be saved as plain text in the badge.",
+		"infoNamePlainText": "The name is stored as plain text in the badge and appears on the PDF certificate.",
 		"multipleBadgeAwardHeadline": "Award badge to multiple learners simultaneously",
 		"uploadListText": "You can <span class='tw-font-bold'>import a list of recipients</span> who should receive the badge at the same time. Here's how:",
 		"downloadExampleCSV": "Download our file template:",
@@ -342,10 +342,11 @@
 		"revokeSuccess": "Revoked Badge from {{ recipient}}",
 		"revokeError": "Revoking Badge from {{ recipient }} failed",
 		"searchIssuer": "search Institution",
+		"searchNetwork": "Netzwerk suchen",
 		"staffOwnerRights": "Access to all functions including adding/removing editors and employees, editing institution details and creating, assigning and deleting badges including micro degrees.",
 		"staffEditorRights": "Rights to create, assign and delete badges, including micro-degrees.",
 		"staffMemberRights": "Can assign badges created by owners and/or editors (including creating, editing and deleting QR code assignments).",
-		"imageFormat": "(Format 1:1 / square)",
+		"imageFormat": "(Format 1:1 / square, file formats: PNG or SVG)",
 		"nameOfIssuer": "Name of Institution",
 		"websiteUrl": "Website-URL",
 		"schoolLabel": "School (elementary school, secondary schools, vocational schools, institutions of formal education)",
@@ -373,7 +374,21 @@
 		"addLinkedInId": "Add LinkedIn ID",
 		"findLinkedInId": "How to find your LinkedIn ID:",
 		"findLinkedInIdText": "Go to your institution's page on LinkedIn. The ID is the sequence of numbers in the corresponding URL. For example, the URL is: www.linkedin.com/company/<span class='tw-font-bold'>12345678</span>/admin. → <span class='tw-font-bold'>ID = 12345678</span>.",
-		"findLinkedInIdNote": "You can add the LinkedIn ID at any time on your institution's page by editing the institution details."
+		"findLinkedInIdNote": "You can add the LinkedIn ID at any time on your institution's page by editing the institution details.",
+		"issueByEmail": "issue by email",
+		"recipientEmail": "Recipient's email address",
+		"emailIsIdentifier": "The email serves as an identifier for the badge. The badge will be sent here.",
+		"receivesBadgeByEmail": "The recipient will receive the badge by email.",
+		"issuerBadges": "Institutional badges",
+		"badgesInNetworks": "Badges in networks",
+		"networkBadges": "Network badges",
+		"yourIssuersAreInNetworks": "Your institutions are part of the following networks:",
+		"awardedNetworkBadges": "These badges were issued by {{issuer}} <span class='tw-underline'>via the respective network</span>:",
+		"noAwardedNetworkBadges": "{{issuer}} has not yet <span class='tw-underline'>awarded badges via a network</span>.",
+		"badgesApprovedForNetworks": " {{ issuer }} has approved these badges for use in the respective network:",
+		"noBadgesApprovedForNetworks": "{{ issuer }} has not yet <span class='tw-underline'>approved</span> badges for a network.",
+		"badgeAwards": "Badge Awards",
+		"partnerBadges": "Partner badges"
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
@@ -398,6 +413,7 @@
 		"waitForInvitationAcceptance": "Once they have confirmed the invitation, they will be visible on the partner page.",
 		"confirmInvitation": "Confirm invitation",
 		"networksHeadline": "All networks at a glance",
+		"noNetworks": "no networks",
 		"partners": "Network members",
 		"noInstitutionAddedYet": "You have not yet added any institutions to your network.",
 		"partnerIssuers": "Partners",
@@ -412,10 +428,19 @@
 			"staff": "Member"
 		},
 		"confirmNetworkInvitation": "Confirm the <span class='tw-font-bold'>network invitation from {{networkName}}</span> for your institution <span class='tw-italic'>{{issuerName}}</span> by clicking the button:",
-		"partnerSince": "Partner since",
+		"partnerSince": "Network Partner since",
 		"partner": "Network Members",
 		"alreadyConfirmed": "Another member of <span class='tw-italic'> {{issuerName}} has already accepted the network invitation from <span class='tw-font-bold'> {{networkName}}</span>.",
-		"view": "View network"
+		"view": "View network",
+		"createBadge": "Create network badge",
+		"awardBadgeIssuer": "Which of your <span class='tw-font-bold'>institutions</span> should the badge be awarded to?",
+		"networkBadges": "Network badges",
+		"noPartnerBadgesYet": "So far, no partner institution has released a badge for the network.",
+		"createdByNetwork": "Created by NETWORK",
+		"partOfNetwork": "Part of the NETWORK",
+		"noBadgesYet": "The network <span class='tw-font-semibold'>{{network}}</span> has not created any badges yet.",
+		"sharedBy": "Shared by",
+		"sharedOn": "Shared on"
 	},
 	"Badge": {
 		"groupBy": "Group by",
@@ -503,7 +528,12 @@
 		"copyPermissionInfo": "The copy status of this badge only allows copying inside this institution.",
 		"awardingInProgress": "Badge awarding in progress",
 		"willBeAwardedSoon": "We will have awarded the badges soon!",
-		"catalogAllLoaded": "All badges matching your search criteria loaded."
+		"catalogAllLoaded": "All badges matching your search criteria loaded.",
+		"shareOnNetwork": "share on network",
+		"allNetworkMembersGetBadge": "All members of the selected network can award the badge via their institution.",
+		"networkAssertionsGetTracked": "All badge awards are included in the network's data evaluation.",
+		"cantRemoveFromNetwork": "The badge CANNOT be removed from the network.",
+		"shareBadgeOnNetwork": "share badge on network"
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Choose category",
