--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -88,10 +88,7 @@
 		"oneRequest": "1 Anfrage",
 		"multiRequests": "# Anfragen",
 		"license": "Lizenz",
-		"language": {
-			"de": "Deutsch",
-			"en": "Englisch"
-		},
+		"language": { "de": "Deutsch", "en": "Englisch" },
 		"close": "Schliessen",
 		"notification": "Benachrichtigung",
 		"validationCompleteForm": "Bitte vollständig ausfüllen",
@@ -425,11 +422,7 @@
 		"resendInvitation": "Einladung erneut senden",
 		"invitedOn": "Eingeladen am",
 		"yourRole": "Deine Rolle: {{role}}",
-		"role": {
-			"owner": "Eigentümer:in",
-			"editor": "Editor:in",
-			"staff": "Mitarbeiter:in"
-		},
+		"role": { "owner": "Eigentümer:in", "editor": "Editor:in", "staff": "Mitarbeiter:in" },
 		"confirmNetworkInvitation": "Bestätige die <span class='tw-font-bold'>Netzwerk-Einladung von {{networkName}}</span> für deine Institution <span class='tw-italic'>{{issuerName}}</span> mit Klick auf den Button:",
 		"partnerSince": "Netzwerk-Partner:in seit",
 		"alreadyConfirmed": "Ein anderes Mitglied von <span class='tw-italic'> {{issuerName}} hat die Netzwerk-Einladung von <span class='tw-font-bold'> {{networkName}}</span> bereits bestätigt.",
@@ -522,7 +515,7 @@
 		"enterOwnCriteriaDesc": "Hier kannst du Erläuterungen eintragen (max. 300 Zeichen)",
 		"participationBadgeInfo": "dient als Bestätigung der Teilnahme an einer Veranstaltung – er enthält <u>keine</u> Kompetenzen.",
 		"competencyBadgeInfo": "kann (mithilfe unseres KI-Assistenten) mit den Kompetenzen gefüllt werden, die deine Lernenden erwerben.",
-		"learningPathBadgeInfo": "verbindet mehrere Badges zu einer größeren Lerneinheit. Wenn Lernende alle Badges dieses „Lernpfades” erworben haben, erhalten sie automatisch den Abschluss Micro Degree.",
+		"learningPathBadgeInfo": "verbindet mehrere Badges zu einer größeren Lerneinheit. Wenn Lernende alle Badges dieses <span class='tw-font-bold'>Lernpfads</span> erworben haben, erhalten sie automatisch den Abschluss Micro Degree.",
 		"lastEdited": "Zuletzt editiert",
 		"badgeSuccessfullyCreated": "Der Badge wurde erfolgreich an {{recipient}} vergeben",
 		"standard": "Badge-Standard",
@@ -541,7 +534,7 @@
 	"CreateBadge": {
 		"chooseBadgeCategory": "Kategorie wählen",
 		"chooseABadgeCategory": "Wähle eine Badge-Kategorie",
-		"chooseCategory": "Badge-Kategorien wählen",
+		"chooseCategory": "Badge-Kategorie wählen",
 		"competencyInfo": "mit Kompetenzen gefüllt werden, die deine Lernenden erwerben",
 		"withAssistant": "mithilfe unseres KI-Badge-Assistenten",
 		"participationInfo": "dienen als Bestätigung der Teilnahme an einer Veranstaltung",
@@ -605,7 +598,7 @@
 		"addTags": "Tags hinzufügen",
 		"newTag": "Einen Tag eingeben...",
 		"tagDoesNotExist": "Dieser Tag existiert noch nicht",
-		"tagInfo": "Tags verschlagworten {{items}} und helfen Lernenden auf OEB bei der Suche von {{items}} zu bestimmten Themen.",
+		"tagInfo": "Tags verschlagworten {{items}} und helfen Lernenden auf OEB bei der Suche von {{items2}} zu bestimmten Themen.",
 		"removeAlignment": "Verknpüfung entfernen",
 		"removeAlignmentInfo": "Bist du sicher, dass du die Verknpüfung(en) entfernen möchtest? ",
 		"irreversibleAction": "Diese Aktion kann nicht rückgängig gemacht werden.",
@@ -1078,11 +1071,7 @@
 		"continue": "Weiterlernen",
 		"finished": "Abgeschlossen",
 		"includedBadges": "Enthaltene Badges",
-		"badgeTabs": {
-			"all": "Alle",
-			"inprogress": "Offen",
-			"finished": "Abgeschlossen"
-		},
+		"badgeTabs": { "all": "Alle", "inprogress": "Offen", "finished": "Abgeschlossen" },
 		"chooseBadges": "Enthaltene Badges wählen",
 		"badgeSequenceStep": "Badge-Reihenfolge",
 		"badgeSequence": "Reihenfolge der Badges im Lernpfad",
@@ -1125,11 +1114,10 @@
 		"deleteMd": "Lernpfad löschen"
 	},
 	"LearningPathEditor": {
-		"shortDescription": "Zusammenfassende Beschreibung des Lernangebots. Diese Kurz-Beschreibung wird im Abschluss-Badge Micro Degree gespeichert."
+		"shortDescriptionLine1": "Zusammenfassende Beschreibung des Lernangebots.",
+		"shortDescriptionLine2": "Diese Kurz-Beschreibung wird im Abschluss-Badge Micro Degree gespeichert."
 	},
-	"OEBComponents": {
-		"fieldIsRequired": "Dieses Feld ist erforderlich"
-	},
+	"OEBComponents": { "fieldIsRequired": "Dieses Feld ist erforderlich" },
 	"ErrorDialog": {
 		"title": "Es ist ein Fehler passiert!",
 		"message": "Unten siehst du die Fehlermeldung. Wenn du glaubst, der Fehler liegt bei uns, kannst du die Fehlermeldung kopieren und uns per Mail schicken, oder du erstellst ein Issue auf GitHub.",
@@ -1138,9 +1126,5 @@
 		"createIssue": "Zu den GitHub Issues",
 		"sendEmail": "Sende eine Mail"
 	},
-	"NounProject": {
-		"searchIcon": "Icon suchen",
-		"loading": "Lädt...",
-		"noIconsFoundFor": "Kein Icon gefunden für"
-	}
+	"NounProject": { "searchIcon": "Icon suchen", "loading": "Lädt...", "noIconsFoundFor": "Kein Icon gefunden für" }
 }
