--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -396,8 +396,8 @@
 		"networksUseBadgesTogether": "Networks can share badges.",
 		"networkLogoOnBadge": "The network logo is also displayed on the corresponding badge images.",
 		"youCanAddInstitutions": "You can create your own network and add your partner institutions:",
-		"create": "create network",
-		"name": "name of the network",
+		"create": "Create network",
+		"name": "Name of the network",
 		"addPartnerNext": "You can add your partner institutions in the next step.",
 		"welcomeDashboard": "Welcome to the dashboard of the network",
 		"inviteInstitutions": "Invite institutions to network",
