--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -443,7 +443,8 @@
 		"partOfNetwork": "Part of the NETWORK",
 		"noBadgesYet": "The network <span class='tw-font-semibold'>{{network}}</span> has not created any badges yet.",
 		"sharedBy": "Shared by",
-		"sharedOn": "Shared on"
+		"sharedOn": "Shared on",
+		"website": "Network website"
 	},
 	"Badge": {
 		"groupBy": "Group by",
