fix: simplify translations for proper capitalization

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -214,7 +214,9 @@
 		"nichtVerified": "This issuer has not yet been verified",
 		"createBadge": "Create badge",
 		"createParticipationBadge": "Create participation badge",
+		"copyParticipationBadge": "Copy participation badge",
 		"createCompetencyBadge": "Create competency badge",
+		"copyCompetencyBadge": "Copy competency badge",
 		"contactInstitution": "Contact institution",
 		"jsonView": "View JSON",
 		"viewOriginal": "View original",
