--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -214,7 +214,9 @@
 		"nichtVerified": "Dieser Issuer wurde noch nicht verifiziert",
 		"createBadge": "Badge erstellen",
 		"createParticipationBadge": "Teilnahme-Badge erstellen",
+		"copyParticipationBadge": "Teilnahme-Badge kopieren",
 		"createCompetencyBadge": "Kompetenz-Badge erstellen",
+		"copyCompetencyBadge": "Kompetenz-Badge kopieren",
 		"contactInstitution": "Institution kontaktieren",
 		"jsonView": "JSON ansehen",
 		"viewOriginal": "Original ansehen",
