--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -386,7 +386,10 @@
 		"badgesApprovedForNetworks": " {{ issuer }} has approved these badges for use in the respective network:",
 		"noBadgesApprovedForNetworks": "{{ issuer }} has not yet <span class='tw-underline'>approved</span> badges for a network.",
 		"badgeAwards": "Badge Awards",
-		"partnerBadges": "Partner badges"
+		"partnerBadges": "Partner badges",
+		"bulkInvalidEmail": "1 invalid email address found. Please correct or remove the email address marked in red.",
+		"bulkInvalidEmailsPlural": "{{count}} invalid email addresses found. Please correct or remove the email addresses marked in red.",
+		"bulkReceiveByEmail": "Recipients will receive the badge by email."
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
