Fix/network dev findings (#1683)
* fix: capitalize

* fix: sublabel signal

* fix: add translation

* fix: add max height for dropdown

* fix: dont allow networks to create lps

* fix: include searching for networks on badge detail

* fix: dynamic translation

* fix: disable button

* fix: translation

* feat: add failure dialog variant

* fix: constrain filter to issuer networks

* fix: filter out partner badges from network badges

* fix: translation, uppercase

* feat: add network image to config

* fix: images in partner table

* fix: missing translation

* fix: missing translations

* fix: links, translations...

* fix: show assertion image, not badge img

* fix: breadcrumb, rm context

* fix: permission checks

* fix: simplify translations for proper capitalization

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -212,7 +212,9 @@
 		"nichtVerified": "Dieser Issuer wurde noch nicht verifiziert",
 		"createBadge": "Badge erstellen",
 		"createParticipationBadge": "Teilnahme-Badge erstellen",
+		"copyParticipationBadge": "Teilnahme-Badge kopieren",
 		"createCompetencyBadge": "Kompetenz-Badge erstellen",
+		"copyCompetencyBadge": "Kompetenz-Badge kopieren",
 		"contactInstitution": "Institution kontaktieren",
 		"jsonView": "JSON ansehen",
 		"viewOriginal": "Original ansehen",
@@ -439,7 +441,8 @@
 		"partOfNetwork": "Teil vom NETZWERK",
 		"noBadgesYet": "Das Netzwerk <span class='tw-font-semibold'>{{network}}</span> hat noch keine eigenen Badges erstellt.",
 		"sharedBy": "Freigegeben von",
-		"sharedOn": "Freigegeben am"
+		"sharedOn": "Freigegeben am",
+		"website": "Netzwerk-Webseite"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
