--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -284,10 +284,10 @@
 		"multipleBadgeAwardHeadline": "Award badge to multiple learners simultaneously",
 		"uploadListText": "You can <span class='tw-font-bold'>import a list of recipients</span> who should receive the badge at the same time. Here's how:",
 		"downloadExampleCSV": "Download our file template:",
-		"exampleCSVLink": "<a class='tw-underline tw-text-[#1400FF]' hlmA href='./assets/badgrBulkIssueTemplate.csv' download='CSV-Beispiel-Vorlage.csv''>Download CSV example template</a>",
+		"exampleCSVLink": "<a class='tw-underline tw-text-[#1400FF]' hlmA href='./assets/badgrBulkIssueTemplate.csv' download='CSV-Sample-template.csv''>Download CSV example template</a>",
 		"openInExcel": "Open it in Excel",
 		"fillInList": "Delete the example entry and fill in the two table columns with the <span class='tw-font-bold'>first and last names*</span> and <span class='tw-font-bold'>email addresses</span> of your learners accordingly.",
-		"exportAsCSV": "Export the template as a CSV file.",
+		"exportAsCSV": "Export the template as a CSV file (text encoding: Unicode (UTF-8).",
 		"uploadCSV": "Upload your CSV file:",
 		"uploadFields": "Include email address, name, and evidence (optional)",
 		"uploadFormat": "CSV or TXT format",
