--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -392,7 +392,8 @@
 		"partnerBadges": "Partner-Badges",
 		"bulkInvalidEmail": "1 ungültige E-Mail-Adresse gefunden. Bitte korrigiere oder entferne die rot markierte E-Mail-Adresse.",
 		"bulkInvalidEmailsPlural": "{{count}} ungültige E-Mail-Adressen gefunden. Bitte korrigiere oder entferne die rot markierten E-Mail-Adressen.",
-		"bulkReceiveByEmail": "Die Empfänger:innen erhalten den Badge per E-Mail."
+		"bulkReceiveByEmail": "Die Empfänger:innen erhalten den Badge per E-Mail.",
+		"addOptionalDetails": "Optional Details hinzufügen"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
