--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -392,7 +392,8 @@
 		"partnerBadges": "Partner badges",
 		"bulkInvalidEmail": "1 invalid email address found. Please correct or remove the email address marked in red.",
 		"bulkInvalidEmailsPlural": "{{count}} invalid email addresses found. Please correct or remove the email addresses marked in red.",
-		"bulkReceiveByEmail": "Recipients will receive the badge by email."
+		"bulkReceiveByEmail": "Recipients will receive the badge by email.",
+		"addOptionalDetails": "Add optional details"
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
